--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>main.MaxTemperatureDriver</mainClass>
+								<mainClass>main.java.com.mestrado.main.MainSpark</mainClass>
 							</manifest>
 						</archive>
 						<descriptorRefs>
@@ -37,8 +37,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.3</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
