--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>hadoop</groupId>
-	<artifactId>hadoop</artifactId>
-	<version>0.0.1</version>
+	<groupId>spark-imrApriori</groupId>
+	<artifactId>spark-imrApriori</artifactId>
+	<version>1.0</version>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -12,7 +12,7 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>main.java.com.mestrado.main.Main</mainClass>
+								<mainClass>main.java.com.mestrado.main.MainSpark</mainClass>
 							</manifest>
 						</archive>
 						<descriptorRefs>
@@ -37,8 +37,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.3</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -79,6 +79,11 @@
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-mapreduce-client-shuffle</artifactId>
 			<version>2.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_2.10</artifactId>
+			<version>1.5.1</version>
 		</dependency>
 	</dependencies>
 </project>
