--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>hadoop</groupId>
-	<artifactId>hadoop</artifactId>
-	<version>0.0.1</version>
+	<groupId>aprioriCpa</groupId>
+	<artifactId>aprioriCpa</artifactId>
+	<version>1</version>
 	<build>
 		<pluginManagement>
 			<plugins>
