--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>aprioriDpc</groupId>
-	<artifactId>aprioriDpc</artifactId>
+	<groupId>DPC</groupId>
 	<version>1</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -83,4 +82,5 @@
 			<version>2.6.0</version>
 		</dependency>
 	</dependencies>
+	<artifactId>DPC</artifactId>
 </project>
